@@ -14,6 +14,8 @@ DIST coreutils-5.94-patches-1.5.tar.bz2 65180 RMD160 c2e7c4632cc8c4ea9d01bb85a37
 DIST coreutils-5.94.tar.bz2 5047523 RMD160 c3620710beea1b8d604210bdec8fbe0a3da892ab SHA1 c39add02995304e1cf3dfc8543702f22155fba50 SHA256 5942f8ba08e0e2faf425d2c0dc62688b1253166c51b170ca1580db5a0b984d5c
 DIST coreutils-6.4-patches-1.0.tar.bz2 47993 RMD160 122882cf72088c7abaff96bff9220efddfc6b1d7 SHA1 dab3b74d668ddcc43c74d41769782460f8bf387e SHA256 daf083f0d37a8988aadb6e2fe030481add139f1cb2f9cfc60b9b62241ff459bc
 DIST coreutils-6.4.tar.bz2 5294210 RMD160 5e3628115ea814cddcfc6630a77c9079bd8676e0 SHA1 b93484cdd4bad11d6c60a015bf57b679849816d1 SHA256 75a6b82bb7e3d07bec5b9bd0fcdfdfdfb88f32728e5089972001b50e4148b87b
+DIST coreutils-6.6-patches-1.0.tar.bz2 48149 RMD160 6d0636decce37e2df7cf3c86bd8ffa372ec45f00 SHA1 b9bfb6deb28a1947c10b3e760ffa325b084d184b SHA256 ac117004148ef5194715db458cd309712e2e4648f479dd6bc54d7851846fa9ca
+DIST coreutils-6.6.tar.bz2 5347197 RMD160 4bdc08de8179c556f93b207bc034c2adce1a678c SHA1 9019a32b122db851eff22ace8669d7cdedf39e7b SHA256 39382e8eb5747e63a835bdd8b56628de947285103ebfb1e64b282a093fa9996e
 EBUILD coreutils-5.94-r3.ebuild 4929 RMD160 6e0929ce4945433aa4b465673c80c5a9878c9dcf SHA1 15edbbf02e83d8cd877d3f42dd87aeb79c0ee2ad SHA256 1336bc0691f882ce770d472fb08af08e86f30ecf00d78db92d6482f78193c22c
 MD5 8c474346db64891a3fbf0e20d92df21d coreutils-5.94-r3.ebuild 4929
 RMD160 6e0929ce4945433aa4b465673c80c5a9878c9dcf coreutils-5.94-r3.ebuild 4929
@@ -22,10 +24,14 @@ EBUILD coreutils-6.4.ebuild 4684 RMD160 646b27f88f6a82b39bf51df50550df267ed3d204
 MD5 2e58d96b9448f751926786b61c3d888f coreutils-6.4.ebuild 4684
 RMD160 646b27f88f6a82b39bf51df50550df267ed3d204 coreutils-6.4.ebuild 4684
 SHA256 7de9caa1320b5f72ec430f6f709e9967f07d69108e2e245334335818da0449a4 coreutils-6.4.ebuild 4684
-MISC ChangeLog 28908 RMD160 6c1df5322317b47d9ec40f9ccb0ba7ea4117b7a9 SHA1 3449f4875741d3fda7532f6a0aa4a9069c8aaa5d SHA256 b623da0743396cc848c8a925448786a7239b51fa1b7174aa07e92f841e45ad97
-MD5 c777080de0f2ef6216867b138f7fc856 ChangeLog 28908
-RMD160 6c1df5322317b47d9ec40f9ccb0ba7ea4117b7a9 ChangeLog 28908
-SHA256 b623da0743396cc848c8a925448786a7239b51fa1b7174aa07e92f841e45ad97 ChangeLog 28908
+EBUILD coreutils-6.6.ebuild 4690 RMD160 44be8acee3179a9f8f777bc612b9b251cca23ac1 SHA1 dde40d45563008ff78a1715bac63ccb3866b2e02 SHA256 7e3f381419e82e93008a29f13a4c2c1ed31df3656408d19d86883c195b5abef8
+MD5 8ec3c8a57dfc4597e380ff2a3cdcb581 coreutils-6.6.ebuild 4690
+RMD160 44be8acee3179a9f8f777bc612b9b251cca23ac1 coreutils-6.6.ebuild 4690
+SHA256 7e3f381419e82e93008a29f13a4c2c1ed31df3656408d19d86883c195b5abef8 coreutils-6.6.ebuild 4690
+MISC ChangeLog 29027 RMD160 c1ea1805626b06c39e9531e7e24daf51a6031bc7 SHA1 b30e7761e1f58fc8676db87a892859b82247873e SHA256 3dfe663f1483fd5a06c84c7116d9a3fcac530b371d7c74a52335bb569184fdff
+MD5 c8bf758e7524afb2d2ce7ee0aaca474d ChangeLog 29027
+RMD160 c1ea1805626b06c39e9531e7e24daf51a6031bc7 ChangeLog 29027
+SHA256 3dfe663f1483fd5a06c84c7116d9a3fcac530b371d7c74a52335bb569184fdff ChangeLog 29027
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
 MD5 9a09f8d531c582e78977dbfd96edc1f2 metadata.xml 164
 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 metadata.xml 164
@@ -36,3 +42,6 @@ SHA256 67a3650bb7586f18ea135ddf4febd44f0b72516dba20aff7bd0c271b6eb7b10e files/di
 MD5 67478b3ad9a07d4c97e272dd51c6ac17 files/digest-coreutils-6.4 524
 RMD160 8201f3c3a0f7efec6c3b02db99810c4493b6ed9f files/digest-coreutils-6.4 524
 SHA256 bdaa6b3e2cbd8bb7063828d82bd6c8217bdcfa38f55fa2196799a5484561750d files/digest-coreutils-6.4 524
+MD5 5e9b1df3879974adef8cb26070c223fc files/digest-coreutils-6.6 524
+RMD160 eeb851c8bea7f81752d03afe277c22de83c45dd1 files/digest-coreutils-6.6 524
+SHA256 3602c16f56dd74a03fed827b185741446b7806056b679a0302545d44f0c7d943 files/digest-coreutils-6.6 524
