@@ -1,0 +1,6 @@
+MD5 82c8f51305af8b0e3d91cdd06a24ccea coreutils-6.6-patches-1.0.tar.bz2 48149
+RMD160 6d0636decce37e2df7cf3c86bd8ffa372ec45f00 coreutils-6.6-patches-1.0.tar.bz2 48149
+SHA256 ac117004148ef5194715db458cd309712e2e4648f479dd6bc54d7851846fa9ca coreutils-6.6-patches-1.0.tar.bz2 48149
+MD5 64f1589af7d9a879c9bdc0af41e19ff1 coreutils-6.6.tar.bz2 5347197
+RMD160 4bdc08de8179c556f93b207bc034c2adce1a678c coreutils-6.6.tar.bz2 5347197
+SHA256 39382e8eb5747e63a835bdd8b56628de947285103ebfb1e64b282a093fa9996e coreutils-6.6.tar.bz2 5347197
