@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/coreutils
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/coreutils/ChangeLog,v 1.184 2006/11/24 16:27:42 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/coreutils/ChangeLog,v 1.185 2006/11/26 15:38:53 vapier Exp $
+
+*coreutils-6.6 (26 Nov 2006)
+
+  26 Nov 2006; Mike Frysinger <vapier@gentoo.org> +coreutils-6.6.ebuild:
+  Version bump.
 
   24 Nov 2006; Markus Rothe <corsair@gentoo.org> coreutils-6.4.ebuild:
   Stable on ppc64; bug #144467
